Use right ids for labels

--- a/leasingninja-sales/src/main/resources/templates/contractView.html
+++ b/leasingninja-sales/src/main/resources/templates/contractView.html
@@ -14,15 +14,15 @@
 		    	<input type="text" id="contractNumber" name="contractNumber" th:value="${contract.number}">
 			</div>
 		    <div>
-		    	<label for="leasingnehmer">Lessee:</label>
+		    	<label for="lessee">Lessee:</label>
 		    	<input type="text" id="lessee" name="lessee" th:value="${contract.lessee}">
 			</div>
 		    <div>
-		    	<label for="fahrzeug">Car:</label>
+		    	<label for="car">Car:</label>
 		    	<input type="text" id="car" name="car" th:value="${contract.car}">
 			</div>
 		    <div>
-		    	<label for="price">Price:</label>
+		    	<label for="price_amount">Price:</label>
 		    	<input type="number" id="price_amount" name="price_amount" th:value="${contract.price_amount}">
 		    	<select id="price_currency" name="price_currency" th:value="${contract.price_currency}">
 				  <option>EUR</option>
