--- a/leasingninja-sales/src/main/resources/templates/contractView.html
+++ b/leasingninja-sales/src/main/resources/templates/contractView.html
@@ -1,5 +1,7 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
+<!--/*@thymesVar id="contract" type="io.leasingninja.sales.ui.ContractModel"*/-->
+<!--/*@thymesVar id="editing_disabled" type="bool"*/-->
 <head>
     <title>LeasingNinja – Sales</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
