--- a/leasingninja-riskmanagement/src/main/resources/templates/contracts.html
+++ b/leasingninja-riskmanagement/src/main/resources/templates/contracts.html
@@ -1,5 +1,6 @@
 <!DOCTYPE HTML>
-<html xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<!--/*@thymesVar id="contracts" type="List<ContractModel>"*/-->
 <head>
     <title>LeasingNinja – Risk management</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -16,10 +17,10 @@
         </tr>
     </thead>
     <tbody>
-    <tr th:if="${books.empty}">
-        <td colspan="3"> No contracts </td>
-        </tr>
-        <tr th:each="contract : ${contracts}">
+         <tr th:if="${contracts.empty}">
+            <td colspan="3"> No contracts to vote </td>
+         </tr>
+         <tr th:each="contract : ${contracts}">
             <td><span th:text="${contract.number}"> Contract </span></td>
             <td><span th:text="${contract.creditRating}"> Credit rating </span></td>
             <td><span th:text="${contract.voteResult}"> Vote result </span></td>
