--- a/leasingninja-riskmanagement/src/main/resources/templates/vote.html
+++ b/leasingninja-riskmanagement/src/main/resources/templates/vote.html
@@ -1,4 +1,6 @@
 <!DOCTYPE HTML>
+<!--/*@thymesVar id="editing_disabled" type="java.lang.Boolean"*/-->
+<!--/*@thymesVar id="contract" type="io.leasingninja.riskmanagement.userinterface.ContractModel"*/-->
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>LeasingNinja – Risk management</title>
