--- a/leasingninja-riskmanagement/src/main/resources/templates/contracts.html
+++ b/leasingninja-riskmanagement/src/main/resources/templates/contracts.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<!--/*@thymesVar id="contracts" type="List<ContractModel>"*/-->
+<!--/*@thymesVar id="contracts" type="java.util.Collection<io.leasingninja.riskmanagement.userinterface.ContractModel>"*/-->
 <head>
     <title>LeasingNinja – Risk management</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -17,13 +17,14 @@
         </tr>
     </thead>
     <tbody>
-         <tr th:if="${contracts.empty}">
-            <td colspan="3"> No contracts to vote </td>
+         <tr th:if="${contracts.isEmpty()}">
+            <td colspan="4"> No contracts to vote </td>
          </tr>
          <tr th:each="contract : ${contracts}">
-            <td><span th:text="${contract.number}"> Contract </span></td>
-            <td><span th:text="${contract.creditRating}"> Credit rating </span></td>
-            <td><span th:text="${contract.voteResult}"> Vote result </span></td>
+             <td><span th:text="${contract.number}"> Contract </span></td>
+             <td><span th:text="${contract.creditRating}"> Credit rating </span></td>
+             <td><span th:text="${contract.voteResult}"> Vote result </span></td>
+             <td><a th:href="rating?contract_number=${contract.number}">Rate</a> </td>
         </tr>
     </tbody>
 </table>
