Beginning of CreditRating

--- a/leasingninja-riskmanagement/src/main/resources/templates/vote.html
+++ b/leasingninja-riskmanagement/src/main/resources/templates/vote.html
@@ -8,7 +8,7 @@
  	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 </head>
 <body>
-	<h1>Risk management</h1>
+	<h1>Risk management—Voting a contract</h1>
     <form action="/vote_contract" method="post">
 		<fieldset id="input" th:disabled="${editing_disabled}">
 		    <div>
