--- a/leasingninja-riskmanagement/src/main/resources/templates/rating.html
+++ b/leasingninja-riskmanagement/src/main/resources/templates/rating.html
@@ -1,6 +1,3 @@
-
-## TODO: Bisher Kopie von Vote.html
-
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
 <!--/*@thymesVar id="editing_disabled" type="java.lang.Boolean"*/-->
@@ -11,23 +8,30 @@
  	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 </head>
 <body>
-	<h1>Risk management</h1>
-    <form action="/vote_contract" method="post">
+	<h1>Risk management—Rating a contract</h1>
+    <form action="/rate_contract" method="post">
 		<fieldset id="input" th:disabled="${editing_disabled}">
 		    <div>
 		    	<label for="contract_number">Number:</label>
-		    	<input type="text" id="contract_number" name="contract_number" th:value="${contract.number}">
+		    	<input type="text" id="contract_number" name="contract_number" th:value="${contract.number}"/>
 			</div>
 		    <div>
-		    	<label for="vote_result">Result:</label>
-		    	<select type="number" id="vote_result" name="vote_result" th:value="${contract.voteResult}">
-				  <option>Accepted</option>
-				  <option>Accepted with obligations</option>
-				  <option>Rejected</option>
-				</select>
+		    	<label for="rating">Credit rating:</label>
+		    	<input type="number" list="possible_ratings" min="1" max="10" id="rating" name="rating" th:value="${contract.creditRating}"/>
+				<datalist id="possible_vote_results">
+					<option value="1">
+					<option value="2">
+					<option value="3">
+					<option value="4">
+					<option value="5">
+					<option value="6">
+					<option value="7">
+					<option value="8">
+					<option value="10">
+				</datalist>
 			</div>
 			<div>
-		     	<button type="submit">Vote</button>
+		     	<button type="submit">Save credit rating</button>
 		   <!--   	<button type="submit" formaction="/sign">Sign</button> --> 
 			</div>
 		  </fieldset>
