--- a/leasingninja-riskmanagement/src/main/resources/templates/rating.html
+++ b/leasingninja-riskmanagement/src/main/resources/templates/rating.html
@@ -9,30 +9,26 @@
 </head>
 <body>
 	<h1>Risk management—Rating a contract</h1>
-    <form action="/rate_contract" method="post">
+    <form action="rate_contract" th:object="${contract}" method="post">
 		<fieldset id="input" th:disabled="${editing_disabled}">
 		    <div>
-		    	<label for="contract_number">Number:</label>
-		    	<input type="text" id="contract_number" name="contract_number" th:value="${contract.number}"/>
+		    	<label for="contract_number">Contract:</label>
+		    	<input type="text"
+					id="contract_number"
+					name="contract_number"
+					th:value="*{number}"
+					/>
 			</div>
 		    <div>
-		    	<label for="rating">Credit rating:</label>
-		    	<input type="number" list="possible_ratings" min="1" max="10" id="rating" name="rating" th:value="${contract.creditRating}"/>
-				<datalist id="possible_vote_results">
-					<option value="1">
-					<option value="2">
-					<option value="3">
-					<option value="4">
-					<option value="5">
-					<option value="6">
-					<option value="7">
-					<option value="8">
-					<option value="10">
-				</datalist>
+		    	<label th:for="creditRating">Credit rating:</label>
+		    	<input type="number"
+					min="1"
+					max="10"
+					th:field="*{creditRating}"
+					/>
 			</div>
 			<div>
 		     	<button type="submit">Save credit rating</button>
-		   <!--   	<button type="submit" formaction="/sign">Sign</button> --> 
 			</div>
 		  </fieldset>
     </form>
