--- a/leasingninja-sales/src/main/resources/templates/contractView.html
+++ b/leasingninja-sales/src/main/resources/templates/contractView.html
@@ -7,8 +7,8 @@
 <head>
     <title>LeasingNinja – Sales</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" rel="stylesheet">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css"
-          integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
+    <link crossorigin="anonymous" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css"
+          integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" rel="stylesheet">
     <style>
         html, body {
             min-height: 100%;
@@ -230,47 +230,46 @@
 <body>
 <div class="testbox">
 
-    <form action="/sales/fillout_contract" th:object="${contractModel}"  modelAttribute="contractModel"  method="post">
+    <form action="#" method="post"  modelAttribute="contractModel"  th:action="@{/sales/fillout_contract}"  th:object="${contractModel}">
         <div class="banner">
             <h1>Leasing contract</h1>
         </div>
         <fieldset id="input" th:disabled="${editing_disabled}">
             <div>
                 <label for="number">Number:</label>
-                <input type="text" id="number" name="number" th:value="${number}">
-                <div class="error" th:if="${#fields.hasErrors('number')}" th:errors="*{number}">Name Error</div>
+                <input id="number" name="number" th:value="${number}" type="text">
+                <div class="error" th:errors="*{number}" th:if="${#fields.hasErrors('number')}">Name Error</div>
             </div>
             <div>
                 <label for="lessee">Lessee:</label>
-                <input type="text" id="lessee" name="lessee" th:value="${lessee}">
-                <div class="error"th:if="${#fields.hasErrors('lessee')}" th:errors="*{lessee}">Name Error</div>
+                <input id="lessee" name="lessee" th:value="${lessee}" type="text">
+                <div class="error"th:errors="*{lessee}" th:if="${#fields.hasErrors('lessee')}">Name Error</div>
             </div>
             <div>
                 <label for="car">Car:</label>
-                <input type="text" id="car" name="car" th:value="${car}">
-                <div class="error" th:if="${#fields.hasErrors('car')}" th:errors="*{car}">Name Error</div>
+                <input id="car" name="car" th:value="${car}" type="text">
+                <div class="error" th:errors="*{car}" th:if="${#fields.hasErrors('car')}">Name Error</div>
             </div>
             <div>
                 <label for="price_amount">Price:</label>
-                <input type="text" id="price_amount" name="price_amount" th:value="${price_amount}">
-                <div class="error"th:if="${#fields.hasErrors('price_amount')}" th:errors="*{price_amount}">Name Error</div>
+                <input id="price_amount" name="price_amount" th:value="${price_amount}" type="text">
+                <div class="error"th:errors="*{price_amount}" th:if="${#fields.hasErrors('price_amount')}">Name Error</div>
 
                 <select id="price_currency" name="price_currency" th:value="${price_currency}">
                     <option>EUR</option>
                     <option>GPB</option>
                     <option>USD</option>
                 </select>
-                <div class="error"th:if="${#fields.hasErrors('price_currency')}" th:errors="*{price_currency}">Name Error</div>
-            </div>
-
-
-            <div th:switch="${editing_disabled}">
-                <p th:case="false"><button  type="submit">Save</button></p>
-                <p th:case="true"><button style="background-color:red" type="submit" formaction="/sales/sign_contract">You can Sign !</button></p>
-
+                <div class="error"th:errors="*{price_currency}" th:if="${#fields.hasErrors('price_currency')}">Name Error</div>
             </div>
 
         </fieldset>
+        <div th:switch="${editing_disabled}">
+            <p th:case="false"><button  type="submit">Save</button></p>
+            <p th:case="true"><button style="background-color:red" th:formaction="@{/sales/sign_contract}" type="submit" >You can Sign!</button></p>
+        </div>
+
+
     </form>
 </div>
 </body>
